; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/sun4i/extr_sun4i_hdmi_enc.c_sun4i_hdmi_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/sun4i/extr_sun4i_hdmi_enc.c_sun4i_hdmi_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_encoder = type { i32 }
%struct.sun4i_hdmi = type { i32, i64 }

@.str = private unnamed_addr constant [27 x i8] c"Disabling the HDMI Output\0A\00", align 1
@SUN4I_HDMI_VID_CTRL_REG = common dso_local global i64 0, align 8
@SUN4I_HDMI_VID_CTRL_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_encoder*)* @sun4i_hdmi_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sun4i_hdmi_disable(%struct.drm_encoder* %0) #0 {
  %2 = alloca %struct.drm_encoder*, align 8
  %3 = alloca %struct.sun4i_hdmi*, align 8
  %4 = alloca i32, align 4
  store %struct.drm_encoder* %0, %struct.drm_encoder** %2, align 8
  %5 = load %struct.drm_encoder*, %struct.drm_encoder** %2, align 8
  %6 = call %struct.sun4i_hdmi* @drm_encoder_to_sun4i_hdmi(%struct.drm_encoder* %5)
  store %struct.sun4i_hdmi* %6, %struct.sun4i_hdmi** %3, align 8
  %7 = call i32 @DRM_DEBUG_DRIVER(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.sun4i_hdmi*, %struct.sun4i_hdmi** %3, align 8
  %9 = getelementptr inbounds %struct.sun4i_hdmi, %struct.sun4i_hdmi* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @SUN4I_HDMI_VID_CTRL_REG, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @readl(i64 %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* @SUN4I_HDMI_VID_CTRL_ENABLE, align 4
  %15 = xor i32 %14, -1
  %16 = load i32, i32* %4, align 4
  %17 = and i32 %16, %15
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = load %struct.sun4i_hdmi*, %struct.sun4i_hdmi** %3, align 8
  %20 = getelementptr inbounds %struct.sun4i_hdmi, %struct.sun4i_hdmi* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @SUN4I_HDMI_VID_CTRL_REG, align 8
  %23 = add nsw i64 %21, %22
  %24 = call i32 @writel(i32 %18, i64 %23)
  %25 = load %struct.sun4i_hdmi*, %struct.sun4i_hdmi** %3, align 8
  %26 = getelementptr inbounds %struct.sun4i_hdmi, %struct.sun4i_hdmi* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = call i32 @clk_disable_unprepare(i32 %27)
  ret void
}

declare dso_local %struct.sun4i_hdmi* @drm_encoder_to_sun4i_hdmi(%struct.drm_encoder*) #1

declare dso_local i32 @DRM_DEBUG_DRIVER(i8*) #1

declare dso_local i32 @readl(i64) #1

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i32 @clk_disable_unprepare(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
